crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__Django__6.0.2__tests__template_tests__templatetags__tag_27584.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/6.0.2/tests/template_tests/templatetags/tag_27584.py
---
tag_rules: {}
filter_arities: {}
block_specs:
  "tests.template_tests.templatetags.tag_27584::badtag":
    end_tag: endbadtag
    intermediates: []
    opaque: false
